gcc/testsuite/rust/rustc/ui/parser/issues/issue-90728.rs
fn main() {
    a.5.2E+
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
}

